# hemnet-extra

./: .gitignore
cdk/lib/: cdk-stack.ts
src/email-images/: .dockerignore  Cargo.toml  Dockerfile  Makefile  example-1.json
src/email-images/cdk/: package-lock.json  package.json
src/email-images/cdk/lib/: email-images-stack.ts
src/email-images/src/: main.rs
src/upload-images/: Cargo.toml  Dockerfile  Makefile
src/upload-images/cdk/: output.json  package-lock.json  package.json  tsconfig.json
src/upload-images/cdk/lib/: cdk-stack.ts  upload-images-stack.ts
src/upload-images/src/: main.rs
test/example-mails/: no-final-price.eml
