[package]
name = "email-images"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
lambda_runtime = {git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "main"}
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.59"
simple_logger = "2.1.0"
tokio = "1.16.1"
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1.5.4"
anyhow = { version = "1.0.53", features = ["backtrace"] }
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
aws-sdk-s3 = "0.9.0"
aws-sdk-sesv2 = "0.9.0"
aws-smithy-http = "0.36.0"
uuid = { version = "0.8.2", features = ["v4"] }
bytes = "1.1.0"
base64 = "0.20.0-alpha.1"
mail-parser = "0.4.5"
mail-builder = "0.1.3"
dotenvy = "0.15.1"

[dev-dependencies]
cargo-watch = "8.1.1"