[package]
name = "upload-images"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = {git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master"}
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.59"
simple_logger = "1.13.0"
tokio = "1.8.4"
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
uuid = "0.8.2"
backtrace = "0.3.64"

[dev-dependencies]
cargo-watch = "8.1.1"