[package]
name = "upload-images"
version = "0.1.0"
edition = "2021"

[features]
webp = []

[dependencies]
lambda_runtime = {git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master"}
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.59"
simple_logger = "2.1.0"
tokio = "1.16.1"
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.5.4"
uuid = "1.0.0-alpha.1"
anyhow = { version = "1.0.53", features = ["backtrace"] }
snafu = {version = "0.7.0", features = [ "std", "backtraces" ]}

[dev-dependencies]
cargo-watch = "8.1.1"